# fullstack-user-auth-app

./: .env.example  .gitignore  Dockerfile.backend  README.md  benchmark-hashing.ts  docker-compose.yml  package-lock.json  package.json  simple-test.mjs
frontend/: .env.example  Dockerfile.frontend  package-lock.json
frontend/src/: App.css  App.tsx
rust-crypto-analyzer/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
rust-crypto-analyzer/src/: lib.rs
src/: app.ts  db.ts  init.sql
src/services/: hibp.ts
tests/: benchmark-hashing.ts  simple-test.mjs
