[package]
name = "crypto-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_analyzer"
crate-type = ["cdylib"]

[dependencies]
napi = "2.2.3"
napi-derive = "2.2.3"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.7"
argon2 = "0.5"
bcrypt = "0.15"
hex = "0.4"
rand = "0.8"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
zxcvbn = "2.2"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.2"
